--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+#Do not forget to change the site.yml file as well to make sure data is REALLY excluded. 
+
+
 # History files
 .Rhistory
 .Rapp.history
