--- a/_site.yml
+++ b/_site.yml
@@ -20,8 +20,11 @@ navbar:
         href: webscraping_sociology.html
       - text: "Week 3 - Scraping Data Science"  
         href: webscraping_datascience.html
+      - text: "Week 3 - Twitter scraping" 
+        href: scrapingtwitter.html
       - text: "Week 4"  
         href: Rsienatutorial.html
+        
       
         # here, other .Rmds can be added
     - text: "Report"
